--- a/src/main/resources/templates/registro.html
+++ b/src/main/resources/templates/registro.html
@@ -1,41 +1,84 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
-<include href="fragments/base.html">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" th:href="@{/css/base.css}">
+    <title>Registro</title>
+</head>
 
 <body>
+    <div class="container-fluid">
 
-    <form th:action="@{/registro}" th:method="POST" th:object="${usuario}">
-        <div class="container">
-            <h1>Registrarse</h1>
-            <p>Please fill in this form to create an account.</p>
-            <hr>
+        <div class="row align-items-center h-100">
+            <div class="col">
+            </div>
+            <div class="col-10 col-md-5">
+                <h1 class="text-center text-light pb-5">iLOG -Sistema Logistico - UTEC</h1>
 
-            <label for="email"><b>Email</b></label>
-            <input type="text" placeholder="Enter Email" name="email" id="email" th:field="*{email}" required>
-            <label for="nombre"><b>Nombre</b></label>
-            <input type="text" placeholder="Enter nombre" name="nombre" id="nombre" th:field="*{nombre}" required>
-            <label for="nombre"><b>Apellido</b></label>
-            <input type="text" placeholder="Enter Apellido" name="Apellido" id="Apellido" th:field="*{apellido}"
-                required>
-            <label for="psw"><b>Password</b></label>
-            <input type="password" placeholder="Enter Password" name="password" id="password" th:field="*{password}"
-                required>
+                <div class="card">
+                    <form th:action="@{/registro}" th:method="POST" th:object="${usuario}">
+                        <div class="card-header bg-white">
+                            <h1>Registrarse:</h1>
+                        </div>
+                        <div class="card-body">
+                            <div class="form-group"> <label for="email" class="col-10 col-form-label"><b>Email:
+                                    </b></label>
+                                <input class="col-8"  type="text" placeholder="Email" name="email" id="email"
+                                    th:field="*{email}" required></div>
+                            <div class="form-group">
+                                <label for="nombre" class="col-10 col-form-label"><b>Nombre:</b></label>
+                                <input class="col-8"  type="text" placeholder="Nombre" name="nombre"
+                                    id="nombre" th:field="*{nombre}" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="nombre" class="col-10 col-form-label"><b>Apellido:</b></label>
+                                <input class="col-8"  type="text" placeholder="Apellido" name="Apellido"
+                                    id="Apellido" th:field="*{apellido}" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="psw" class="col-10 col-form-label"><b>Password:</b></label>
+                                <input class="col-8"  type="password" placeholder="Password" name="password"
+                                    id="password" th:field="*{password}" required>
+                            </div>
 
-            <label for="psw-repeat"><b>Repeat Password</b></label>
-            <input type="password" placeholder="Repeat Password" name="psw-repeat" id="psw-repeat" required>
 
-            <hr>
+                            <div class="form-group">
+                                <label for="psw-repeat" class="col-10 col-form-label"><b>Repite tu
+                                        Password:</b></label>
+                                <input class="col-8"  type="password" placeholder="Repite tu Password" name="psw-repeat"
+                                    id="psw-repeat" required>
+                            </div>
 
 
 
-            <p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>
-            <button type="submit" class="registerbtn">Register</button>
+                            <hr>
+
+
+
+                            <p>Al crear tu cuenta estas aceptando nuestros <a href="#">Terminos y condiciones</a>.
+                            </p>
+                            <button type="submit" class="btn btn-primary">Aceptar</button>
+
+                            <div>
+                                <p>¿Ya tienes una cuenta?<a href="/login">Ingresa Aqui</a>.</p>
+                            </div>
+                        </div>
+
+                    </form>
+
+                </div>
+            </div>
+            <div class="col">
+            </div>
         </div>
 
-        <div class="container signin">
-            <p>Already have an account? <a href="#">Sign in</a>.</p>
-        </div>
-    </form>
+
+    </div>
 
 
 </body>
