--- a/src/main/resources/templates/formSubCat.html
+++ b/src/main/resources/templates/formSubCat.html
@@ -18,7 +18,8 @@
 		<div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav">
 				<li class="nav-item active"><a class="nav-link" href="#">Home</a></li>
-				<li class="nav-item"><a class="nav-link" th:href="@{/listarCat}">Categoria</a></li>
+				<li class="nav-item"><a class="nav-link"
+					th:href="@{/listarSubCat}">SubCategorias</a></li>
 			</ul>
 		</div>
 	</nav>
@@ -27,12 +28,12 @@
 		<h1 th:text="${titulo}"
 			class="text-secondary border border-success border-top-0 border-left-0 border-right-0"></h1>
 
-		<div th:object="${categoria}" th:remove="tag">
+		<div th:object="${subCat}" th:remove="tag">
 			<ul th:if="${#fields.hasErrors('*')}" class="alert alert-danger">
 				<li th:each="err: ${#fields.errors('*')}" th:text="${err}"></li>
 			</ul>
 		</div>
-		<form th:action="@{/formCat}" th:object="${categoria}" method="post">
+		<form th:action="@{/formSubCat}" th:object="${subCat}" method="post">
 			<div class="form-group row">
 				<label class="col-sm-2 col-form-label">Nombre</label>
 				<div class="col-sm-6">
@@ -42,12 +43,12 @@
 						th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}"></small>
 				</div>
 			</div>
-			
-			
-			
+
+
+
 			<div class="form-group row">
 				<div class="col-sm-6">
-					<input type="submit" value="Crear Categoria" class="btn btn-primary" />
+					<input type="submit" value="Crear SubCategoria" class="btn btn-primary" />
 				</div>
 			</div>
 
