--- a/src/main/resources/templates/listarSubCat.html
+++ b/src/main/resources/templates/listarSubCat.html
@@ -20,7 +20,7 @@
 				<li class="nav-item active"><a class="nav-link" href="#">Home
 						<span class="sr-only">(current)</span>
 				</a></li>
-				<li class="nav-item"><a class="nav-link" th:href="@{/listarCat}">Categoria</a>
+				<li class="nav-item"><a class="nav-link" th:href="@{/listarSubCat}">SubCategorias</a>
 				</li>
 			</ul>
 		</div>
@@ -31,28 +31,27 @@
 			class="text-secondary border border-success border-top-0 border-left-0 border-right-0"
 			th:text="${titulo}"></h1>
 		<p>
-			<a th:href="@{/formCat}" class="btn btn-success btn-xs">crear
-				categoria</a>
+			<a th:href="@{/formSubCat}" class="btn btn-success btn-xs">crear
+				subCategoria</a>
 		</p>
 		<table class="table table-striped">
 			<thead>
 				<tr>
-					<th>id</th>
+					<th>idSubCat</th>
 					<th>nombre</th>
-					
 					<th>editar</th>
 					<th>eliminar</th>
 				</tr>
 			</thead>
 			<tbody>
-				<tr th:each="categoria: ${categorias}">
-					<td th:text="${categoria.idCat}"></td>
-					<td th:text="${categoria.nombre}"></td>
+				<tr th:each="subCat: ${subcats}">
+					<td th:text="${subCat.idSubCat}"></td>
+					<td th:text="${subCat.nombre}"></td>
 					
 					<td><a class="btn btn-primary btn-xs"
-						th:href="@{/form/} + ${categoria.idCat}" th:text="'editar'"></a></td>
+						th:href="@{/formSubCat/} + ${subCat.idSubCat}" th:text="'editar'"></a></td>
 					<td><a class="btn btn-danger btn-xs"
-						th:href="@{/eliminar/} + ${categoria.idCat}" th:text="'eliminar'"
+						th:href="@{/eliminarSubCat/} + ${subCat.idSubCat}" th:text="'eliminar'"
 						onclick="return confirm('Estás seguro que quieres eliminar?');"></a></td>
 				</tr>
 			</tbody>
