--- a/src/main/resources/templates/crearRecepcion.html
+++ b/src/main/resources/templates/crearRecepcion.html
@@ -24,10 +24,10 @@
         <div class="col-xs-1-12">
             <div class="card">
                 <div class="card-body">
-                    <form action="/recepcion/crear" method="POST">
+                    <form action="/recepcion/crear" th:object="${recepcion}" method="POST">
                         <div class="form-group row">
-                            <input class="form-control col-4 m-1" type="text" placeholder="Buscar Producto" name="producto"
-                                id="producto" />
+                            <input class="form-control col-4 m-1" type="text" placeholder="Buscar Producto"
+                                name="producto" id="producto" />
                             <input class="form-control col-4 m-1" type="number" placeholder="Cantidad" name="cantidad"
                                 id="cantidad" />
                             <div class="dropdown m-1">
@@ -64,13 +64,13 @@
                                 </tr>
                             </tbody>
                         </table>
-                                                    <input class="btn btn-primary" type="submit" value="ACEPTAR">
+                        <input class="btn btn-primary" type="submit" value="ACEPTAR">
 
                     </form>
                 </div>
             </div>
         </div>
-        
+
 
     </div>
 </body>
