se agrega constructores a clases producto, tipo de producto, y categoria, se sigue trabajando en lapantalla de creacion de producto, se logroenviar las entidades producto y los estados de producto ala pantalla con exito

--- a/src/main/resources/templates/crearRecepcion.html
+++ b/src/main/resources/templates/crearRecepcion.html
@@ -26,23 +26,32 @@
                 <div class="card-body">
                     <form action="/recepcion/crear" th:object="${recepcion}" method="POST">
                         <div class="form-group row">
-                            <input class="form-control col-4 m-1" type="text" placeholder="Buscar Producto"
-                                name="producto" id="producto" />
-                            <input class="form-control col-4 m-1" type="number" placeholder="Cantidad" name="cantidad"
-                                id="cantidad" />
-                            <div class="dropdown m-1">
-                                <button class="btn btn-danger dropdown-toggle" type="button" id="dropdownMenuButton"
-                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    Estado
-                                </button>
-                                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                    <a class="dropdown-item" href="#">Disponible</a>
-                                    <a class="dropdown-item" href="#">Reservado</a>
-                                    <a class="dropdown-item" href="#">No disponible</a>
-                                </div>
+                            <div class="form-group m-1">
+                                <label for="producto">Producto</label>
+                                <select class="form-control" id="producto">
+                                        <option th:each="producto : ${productos}" th:value="${producto}"
+                                            th:text="${producto}">
+                                        </option>
+
+                                </select>
                             </div>
-                            <input class="btn btn-danger m-1" type="action" value="Agregar">
+                            <div class="form-group m-1">
+                                <label for="cantidad">Cantidad</label>
+
+                                <input class="form-control " type="number" placeholder="Cantidad" name="cantidad"
+                                    id="cantidad" /> </div>
+                            <div class="form-group m-1">
+                                <label for="estado">Estado</label>
+                                <select class="form-control" id="estado">
+                                    <option th:each="estado : ${estadosProducto}" th:value="${estado}"
+                                        th:text="${estado}">
+                                    </option>
+                                </select>
+                            </div>
+
                         </div>
+                        <input class="btn btn-danger m-1 " type="action" value="Agregar">
+
                         <table class="table">
                             <thead>
                                 <tr>
